--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>ISCRIPT | Society for Computational Research, Innovation & Patent Technology</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="ISCRIPT (Society for Computational Research, Innovation & Patent Technology) promotes computational research, innovation, IP facilitation, technology transfer, skill development, and consultancy." />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -22,7 +23,8 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="SCRIPT Logo" /></span>
+									<span class="title">ISCRIPT</span>
 								</a>
 
 							<!-- Nav -->
@@ -40,196 +42,227 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="about.html">About ISCRIPT</a></li>
+							<li><a href="domains.html">Domains</a></li>
+							<li><a href="ip-support.html">IP & Patent Support</a></li>
+							<li><a href="programs.html">Programs & Events</a></li>
+							<li><a href="publications.html">Publications</a></li>
+							<li><a href="membership.html">Membership</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+
 							<header>
-								<h1>This is ISCRIPT,our first fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>
+									ISCRIPT — Society for Computational Research, Innovation &amp; Patent Technology
+								</h1>
+								<p>
+									A collaborative platform for researchers, academicians, and industry experts to advance
+									Computational Science, Artificial Intelligence, Cybersecurity, IoT, and allied technologies —
+									with strong support for Intellectual Property (IP), technology transfer, and real-world impact.
+								</p>
+
+								<ul class="actions">
+									<li><a href="membership.html" class="button primary">Join as a Member</a></li>
+									<li><a href="ip-support.html" class="button">Request IP / Patent Support</a></li>
+								</ul>
 							</header>
+
+							<!-- Tiles / Key Pillars -->
 							<section class="tiles">
+
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="Research and Innovation" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="domains.html">
+										<h2>Research &amp; Innovation</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Promoting advanced research in Computational Science, AI, Cybersecurity, IoT and allied technologies.</p>
 										</div>
 									</a>
 								</article>
+
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="IP Facilitation" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="ip-support.html">
+										<h2>IP Facilitation</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Patentability assessment, prior art search, drafting, filing support, and Section 3(k) guidance.</p>
 										</div>
 									</a>
 								</article>
+
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic03.jpg" alt="Technology Transfer" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
+									<a href="ip-support.html">
+										<h2>Technology Transfer</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Curating IP-driven solutions and enabling licensing / ToT to industry, startups, and MSMEs.</p>
 										</div>
 									</a>
 								</article>
+
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic04.jpg" alt="Skill Development" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="programs.html">
+										<h2>Skill Development</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Workshops and training on patent drafting, IP valuation, and computational research methodologies.</p>
 										</div>
 									</a>
 								</article>
+
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="Advisory and Consultancy" />
 									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
+									<a href="contact.html">
+										<h2>Advisory &amp; Consultancy</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Support for IP strategy, technology road-mapping, R&amp;D audits, and institutional advisory.</p>
 										</div>
 									</a>
 								</article>
+
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="Membership" />
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
+									<a href="membership.html">
+										<h2>Membership</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Join ISCRIPT to collaborate, protect your innovations, and build impact-driven portfolios.</p>
 										</div>
 									</a>
 								</article>
+
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/pic07.jpg" alt="Programs and Events" />
 									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
+									<a href="programs.html">
+										<h2>Programs &amp; Events</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Seminars, training programs, and community meetups to foster innovation and capability.</p>
 										</div>
 									</a>
 								</article>
+
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="images/pic08.jpg" alt="Publications" />
 									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
+									<a href="publications.html">
+										<h2>Publications</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Newsletters, white papers, and technical reports highlighting innovations and solutions.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
+
 							</section>
+
+							<!-- Aims & Objectives (condensed) -->
+							<section style="margin-top: 2.5rem;">
+								<header class="major">
+									<h2>Aims &amp; Objectives</h2>
+								</header>
+
+								<p><strong>ISCRIPT</strong> is established with the following aims and objectives:</p>
+
+								<ol>
+									<li>
+										<strong>Promotion of Research &amp; Innovation:</strong>
+										Promote advanced research in Computational Science, Artificial Intelligence, Cybersecurity, Internet of Things (IoT), and allied technologies. Create a collaborative platform to identify and solve critical technological challenges relevant to India and the globe.
+									</li>
+									<li>
+										<strong>Intellectual Property (IP) Facilitation:</strong>
+										Facilitate protection of intellectual property including patents, copyrights (software code), and industrial designs. Provide technical and legal guidance on patentability, prior art searches, and Section 3(k) compliance for computer-related inventions.
+									</li>
+									<li>
+										<strong>Technology Transfer &amp; Solutions Development:</strong>
+										Bridge academia and industry by curating IP-driven solutions into market-ready portfolios. Enable Technology Transfer (ToT) and licensing to industries, startups, and MSMEs; incubate ideas and translate prototypes into viable products.
+									</li>
+									<li>
+										<strong>Skill Development &amp; Dissemination:</strong>
+										Organize workshops, seminars, and training on patent drafting, IP valuation, and research methods. Publish journals, newsletters, and white papers showcasing member innovations.
+									</li>
+									<li>
+										<strong>Advisory &amp; Consultancy:</strong>
+										Offer consultancy to educational institutions, government bodies, and private entities on IP strategy, technology road-mapping, and R&amp;D audits.
+									</li>
+								</ol>
+
+								<ul class="actions">
+									<li><a href="about.html" class="button">Learn More About ISCRIPT</a></li>
+									<li><a href="contact.html" class="button primary">Collaborate With Us</a></li>
+								</ul>
+							</section>
+
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+
 							<section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+											<input type="text" name="name" id="name" placeholder="Your Name" />
 										</div>
 										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
+											<input type="email" name="email" id="email" placeholder="Your Email" />
 										</div>
 										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
+											<input type="text" name="subject" id="subject" placeholder="Subject (e.g., Membership / IP Support / Collaboration)" />
+										</div>
+										<div class="field">
+											<textarea name="message" id="message" placeholder="Write your message here..."></textarea>
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
+										<li><input type="submit" value="Send Message" class="primary" /></li>
 									</ul>
+									<p style="margin-top: 0.75rem; font-size: 0.9rem;">
+										<strong>Note:</strong> For v1 deployment, you can connect this form to Google Forms / Formspree or a backend endpoint later.
+									</p>
 								</form>
 							</section>
+
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands style2 fa-x-twitter"><span class="label">X</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="mailto:iscript.society@example.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
+
+								<p style="margin-top: 1rem;">
+									<strong>Email:</strong> contact@example.com<br />
+									<strong>Location:</strong> India (details to be updated)
+								</p>
 							</section>
+
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; ISCRIPT. All rights reserved.</li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
+
 						</div>
 					</footer>
 
@@ -244,3 +277,5 @@
 
 	</body>
 </html>
+
+git config --global user.name "Your Name"
