Added new pages

--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
 									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-x-twitter"><span class="label">X</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="mailto:iscript.society@example.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="mailto:iscript.society@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 
 								<p style="margin-top: 1rem;">
-									<strong>Email:</strong> contact@example.com<br />
-									<strong>Location:</strong> India (details to be updated)
+									<strong>Email:</strong> iscript.society@gmail.com<br />
+									<strong>Location:</strong> Jamshedpur, India
 								</p>
 							</section>
 
