chanegs in downloadable files

--- a/publications.html
+++ b/publications.html
@@ -88,12 +88,12 @@
 											<tr>
 												<td>Issue 01</td>
 												<td>ISCRIPT Launch Edition (Template)</td>
-												<td><a href="#" title="Docs\issue01.pdf">Download</a></td>
+												<td><a href="Docs\issue01.pdf" title="document in pdf format">Download</a></td>
 											</tr>
 											<tr>
 												<td>Issue 02</td>
 												<td>Research & IP Highlights (Template)</td>
-												<td><a href="#" title="Docs\issue01.docx">Download</a></td>
+												<td><a href="Docs\issue01.dock" title="document in docx format">Download</a></td>
 											</tr>
 										</tbody>
 									</table>
