--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
 											<tr>
 												<td>Issue 02</td>
 												<td>Research & IP Highlights (Template)</td>
-												<td><a href="Docs\issue01.dock" title="document in docx format">Download</a></td>
+												<td><a href="Docs\issue01.docx" title="document in docx format">Download</a></td>
 											</tr>
 										</tbody>
 									</table>
